fix: add more contrast to the text inside "hero" section

--- a/styles/hero.css
+++ b/styles/hero.css
@@ -13,4 +13,6 @@
 
 .hero__text {
   color: var(--c-white);
+  font-size: 1.5rem;
+  font-weight: bold;
 }
